--- a/views/index.erb
+++ b/views/index.erb
@@ -8,4 +8,11 @@
     <link href="stylesheets/style.css" rel="stylesheet">
 	</head>
 	<body>
+		<header>
+			<h1></h1>
+		</header>
+
+		<section>
+			<img id="circle" src="./images/circle2.png">
+		</section>
 	</body>
